--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,11 +11,5 @@ endif()
 
 project ("EasyGameEngine")
 
-# Добавьте источник в исполняемый файл этого проекта.
-add_executable (EasyGameEngine "EasyGameEngine.cpp" "EasyGameEngine.h")
-
-if (CMAKE_VERSION VERSION_GREATER 3.12)
-  set_property(TARGET EasyGameEngine PROPERTY CXX_STANDARD 20)
-endif()
-
-# TODO: Добавьте тесты и целевые объекты, если это необходимо.
+add_subdirectory("src")
+add_subdirectory("sandbox")
